@@ -1,5 +1,11 @@
 2006-07-21  MenTaLguY  <mental@rydia.net>
 
+	* src/selection.cpp, src/selection.h:
+
+	  switch to sigc++ signals for "modified" and "release"
+
+2006-07-21  MenTaLguY  <mental@rydia.net>
+
 	* src/ui/view/edit-widget.cpp, src/ui/view/edit-widget.cpp:
 
 	  switched to using sigc++ "modified" signal
